# Admin/OnAim.Admin.APP/OpenAPIs/swagger.json
@@ -403,6 +403,37 @@
         }
       }
     },
+    "/HubApi/Admin/AddBalanceToPlayer": {
+      "post": {
+        "tags": [
+          "Admin"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddBalanceCommand"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddBalanceCommand"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddBalanceCommand"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/HubApi/Admin/CreateSegment": {
       "post": {
         "tags": [
@@ -1282,6 +1313,24 @@
   },
   "components": {
     "schemas": {
+      "AddBalanceCommand": {
+        "type": "object",
+        "properties": {
+          "playerId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "coinId": {
+            "type": "string",
+            "nullable": true
+          },
+          "amount": {
+            "type": "number",
+            "format": "double"
+          }
+        },
+        "additionalProperties": false
+      },
       "CoinType": {
         "enum": [
           0,
